package EjerciciosHerencia;

public class FiguraGeometrica {
    protected String nombreFigura;

    public FiguraGeometrica(String nombreFigura) {
        this.nombreFigura = nombreFigura;
    }

    public double CalcularArea() {
        return 0;
    }
    public double CalcularPerimetro() {
        return 0;
    }
}
